@@ -2,87 +2,98 @@ package ru.practicum.shareit.user.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.exception.EmailAlreadyExistsException;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.user.mapper.UserMapper;
 import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.model.User;
+import ru.practicum.shareit.user.repository.UserRepository;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class UserServiceIml implements UserService {
-    private final Map<Long, User> users = new HashMap<>();
-    private final AtomicLong idCounter = new AtomicLong(1);
+    private final UserRepository userRepository;
 
     @Override
+    @Transactional
     public UserDto createUser(UserDto userDto) {
-        checkEmailExists(userDto.getEmail(), null);
+        if (userRepository.existsByEmail(userDto.getEmail())) {
+            throw new EmailAlreadyExistsException("Пользователь с таким email уже существует");
+        }
 
         User user = UserMapper.toUser(userDto);
-        user.setId(idCounter.getAndIncrement());
-        users.put(user.getId(), user);
-        return UserMapper.toUserDto(user);
+        User savedUser = userRepository.save(user);
+        return UserMapper.toUserDto(savedUser);
     }
 
     @Override
     public UserDto updateUser(Long userId, UserDto userDto) {
-        User existingUser = users.get(userId);
-        if (existingUser == null) {
-            throw new NotFoundException("Пользователь не найден");
-        }
+        User existingUser = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
 
-        if (userDto.getEmail() != null && !userDto.getEmail().isBlank()) {
-            checkEmailExists(userDto.getEmail(), userId);
+        if (userDto.getEmail() != null &&
+                !userDto.getEmail().isBlank() &&
+                !existingUser.getEmail().equals(userDto.getEmail())) {
+
+            if (userRepository.existsByEmailAndIdNot(userDto.getEmail(), userId)) {
+                throw new EmailAlreadyExistsException("Пользователь с таким email уже существует");
+            }
             existingUser.setEmail(userDto.getEmail());
         }
 
-        if (userDto.getName() != null) {
+        if (userDto.getName() != null && !userDto.getName().isBlank()) {
             existingUser.setName(userDto.getName());
         }
 
-        users.put(userId, existingUser);
-        return UserMapper.toUserDto(existingUser);
+        User updatedUser = userRepository.save(existingUser);
+        return UserMapper.toUserDto(updatedUser);
     }
 
     @Override
     public UserDto getUserById(Long userId) {
-        User user = users.get(userId);
-        if (user == null) {
-            throw new NotFoundException("Пользователь не найден");
-        }
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
         return UserMapper.toUserDto(user);
     }
 
     @Override
     public User getUserEntityById(Long userId) {
-        User user = users.get(userId);
-        if (user == null) {
-            throw new NotFoundException("Пользователь не найден");
-        }
-        return user;
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
     }
 
     @Override
     public List<UserDto> getAllUsers() {
-        return users.values().stream()
+        return userRepository.findAll().stream()
                 .map(UserMapper::toUserDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Transactional
     public void deleteUser(Long userId) {
-        users.remove(userId);
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Пользователь не найден");
+        }
+        userRepository.deleteById(userId);
     }
 
     private void checkEmailExists(String email, Long userId) {
-        boolean emailExists = users.values().stream()
-                .filter(user -> userId == null || !user.getId().equals(userId))
-                .anyMatch(user -> user.getEmail().equalsIgnoreCase(email));
+        boolean emailExists;
+
+        if (userId == null) {
+            emailExists = userRepository.findAll().stream()
+                    .anyMatch(user -> user.getEmail().equalsIgnoreCase(email));
+        } else {
+            emailExists = userRepository.findAll().stream()
+                    .filter(user -> !user.getId().equals(userId))
+                    .anyMatch(user -> user.getEmail().equalsIgnoreCase(email));
+        }
 
         if (emailExists) {
             throw new EmailAlreadyExistsException("Пользователь с таким email уже существует");
